syntax = "proto3";

package com.teamrocket;

option java_multiple_files = true;

service BookPurchaseService {
  rpc purchaseBook(BookToBuy) returns (BoughtBook);
}

message BookToBuy {
  int64 bookId = 1;
  double price = 2;
  int64 studentId = 3;
}

message BoughtBook {
  int64 id = 1;
}